--- a/index.html
+++ b/index.html
@@ -181,13 +181,14 @@
 <h1 class="title">Yok Leaks</h1>
 
 
-<p class="caption">Nudes of Meriam Mortaji</p>
+<p class="caption">Nudes of Emmiii_060</p>
 
 <div class="slideshow-container">
-    <img src="Meriam-1.jpg" class="slides active" alt="Slide 1">
-    <img src="Meriam-2 (1).jpg" class="slides" alt="Slide 2">
-    <img src="Meriam-3 (1).jpg" class="slides" alt="Slide 3">
-    <img src="IMG_0402.jpeg" class="slides" alt="Slide 4">
+    <img src="emily.jpeg" class="slides active" alt="Slide 1">
+    <img src="emily (2).jpeg" class="slides" alt="Slide 2">
+    <img src="IMG_1039.jpeg" class="slides" alt="Slide 3">
+    <img src="emily nude-2.jpeg" class="slides" alt="Slide 4">
+    <img src="image.jpg" class="slides" alt="Slide 5">
     <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
     <button class="next" onclick="changeSlide(1)">&#10095;</button>
 </div>
